--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,27 @@
-.app{
-  height: 100vh;
+
+.appcontain{
   display: flex;
-  color: white;
-  background-color: #050a30;
+  flex-direction: row;
+  width: 100vw;
 }
 /* colors
 #050a30
 #263be8 ,
 #cfe5fa - lightest */
 .app {
-  height: 100vh;
   display: flex;
   color: white;
-  background-color: #050a30;
+  background-image: url('./assets/likeminds.jpg');
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  /* background-color: #050a30; */
 }
 
 .main {
   width: 75%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #050a30),
-    url("./assets/bg.jpg") center;
+ /*  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #050a30),
+    url("./assets/bg.jpg") center; */
   display: flex;
   flex-direction: column;
 }
@@ -45,7 +48,7 @@
 }
 
 .cashListItem.active {
-  background-color: teal;
+  background-color: #263be8;
 }
 
 .cashListItemNumber {
@@ -60,8 +63,8 @@
 }
 
 .top {
-  height: 50%;
   position: relative;
+  height: 200px;
 }
 
 .timer {
@@ -79,9 +82,9 @@
   font-weight: 700;
 }
 
-.bottom {
+/* .bottom {
   height: 50%;
-}
+} */
 
 .trivia {
   height: 100%;
@@ -99,6 +102,7 @@
   border-radius: 10px;
   border: 2px solid white;
   font-size: 20px;
+  margin-bottom: 5px;
 }
 
 .answers {
@@ -179,7 +183,7 @@
 
 .connect {
   width: 250px;
-  height: 100px;
+  height: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -190,11 +194,11 @@
   left: 0;
   right: 0;
   margin: auto;
+  
 }
 
 .connectInput {
   width: 100%;
-  height: 30px;
   border: none;
   border-radius: 5px;
   text-align: center;
@@ -207,10 +211,27 @@
 
 .connectButton {
   width: 100%;
-  height: 30px;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
+  color: white;
+  background-color: #263be8;
+}
+
+@media only screen and (max-width: 500px) {
+  .main {
+    width: 100%;
+  }
+  .cash {
+    width: 100%;
+  }
+  .appcontain{
+    flex-direction: column;
+    height: auto;
+  }
+  
+ 
 }
